# cleanarch-ioc-pypackage

./: LICENSE  README.md  cookiecutter.json  package.sh
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config-docker.yml  config-test.yml  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/application/services/: user.py
{{cookiecutter.project_slug}}/app/core/: config.py  container.py
{{cookiecutter.project_slug}}/app/domain/: models.py
{{cookiecutter.project_slug}}/app/domain/exceptions/: base.py
{{cookiecutter.project_slug}}/app/domain/repositories/: user.py
{{cookiecutter.project_slug}}/app/infrastructure/adapters/: opensearch_adapter.py
{{cookiecutter.project_slug}}/app/infrastructure/cache/: redis.py
{{cookiecutter.project_slug}}/app/infrastructure/database/: config.py
{{cookiecutter.project_slug}}/app/interface/api/actuator/: endpoints.py
{{cookiecutter.project_slug}}/app/interface/api/user/: endpoints.py
{{cookiecutter.project_slug}}/app/interface/api/users/: endpoints.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/unit/: test_actuator_endpoint.py  test_api.py  test_logging.py  test_request.py  test_schema_list.py  test_users_endpoint.py
